fixing the regalo.html page h9 to text-align center

--- a/regalo.css
+++ b/regalo.css
@@ -48,6 +48,7 @@ nav {
 /*/*//*/*/
 
 h9 {
+  text-align: center;
   font-family: 'Cormorant', serif;
   font-style: bold;
   font-size: 2.5rem;
